chenged link names

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Informacije</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Galerija</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#showcase">O meni</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Pravilnik</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#informacije">Informacije</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#galerija">Galerija</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#o-meni">O meni</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#pravilnik">Pravilnik</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,11 +43,11 @@
             <div class="container">
                 <!--.masthead-subheading Welcome To Our Studio!-->
                 <!--.masthead-heading.text-uppercase It's Nice To Meet You-->
-                <!--a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Tell Me More-->
+                <!--a.btn.btn-primary.btn-xl.text-uppercase(href='#informacije') Tell Me More-->
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="informacije">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Dobrodošli</h2>
@@ -89,7 +89,7 @@
             </div>
         </section>
         <!-- Portfolio-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="galerija">
             <div class="container">
                 <div class="instagram">
                     <div class="text-center">
@@ -189,7 +189,7 @@
             </div>
         </section>
         <!-- Image Showcases-->
-        <section id="showcase">
+        <section id="o-meni">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">O meni</h2>
@@ -217,7 +217,7 @@
             </div>
         </section>
         <!-- About-->
-        <section class="page-section" id="about">
+        <section class="page-section" id="pravilnik">
             <div class="container">
                 <div class="text-center"><h2 class="section-heading text-uppercase">Pravilnik</h2></div>
                 <div class="row g-0">
