chenged link names

--- a/index.html
+++ b/index.html
@@ -106,80 +106,80 @@
                 <div class="text-center"><h2 class="section-heading text-uppercase">Galerija</h2></div>
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_1.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_1.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
+                            <div class="galerija-box-caption">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_2.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_2.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_2.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
+                            <div class="galerija-box-caption">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_3.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_3.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
+                            <div class="galerija-box-caption">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_4.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_4.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_4.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
+                            <div class="galerija-box-caption">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_6.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_6.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
+                            <div class="galerija-box-caption p-3">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_8.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_8.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_8.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
+                            <div class="galerija-box-caption p-3">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6"></div>
-                    <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_5.jpg" title="Salon">
+                    <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_5.jpg" title="Salon">
                         <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_5.jpg" alt="..." />
-                        <div class="portfolio-box-caption">
+                        <div class="galerija-box-caption">
                             <div class="project-category text-white-50">Cukigrooms</div>
                             <div class="project-name">Salon</div>
                         </div>
                     </a>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_7.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_7.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_7.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
+                            <div class="galerija-box-caption p-3">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/Cukigrooms_salon_9.jpg" title="Salon">
+                        <a class="galerija-box" href="assets/img/portfolio/Cukigrooms_salon_9.jpg" title="Salon">
                             <img class="img-fluid" src="assets/img/portfolio/Cukigrooms_salon_9.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
+                            <div class="galerija-box-caption p-3">
                                 <div class="project-category text-white-50">Cukigrooms</div>
                                 <div class="project-name">Salon</div>
                             </div>
@@ -196,8 +196,8 @@
                     <br />
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/cukigrooms_ogi.jpg')"></div>
-                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                    <div class="col-lg-6 order-lg-2 text-white o-meni-img" style="background-image: url('assets/img/cukigrooms_ogi.jpg')"></div>
+                    <div class="col-lg-6 order-lg-1 my-auto o-meni-text">
                         <h2>Tko je Cuki i što je CukiGrooms?</h2>
                         <p class="lead mb-0">
                             Od najranijeg djetinjstva gajim veliku ljubav prema životinjama, posebice psima, što sam naslijedila od tate i bake. Kad sam imala godinu dana, nabavili smo štene njemačkog boksera, uz koje sam i prohodala, i koja je bila moja prva frendica. U mom životu psi su neizostavan dio svakodnevice. Tijekom studija, prvi posao koji sam radila je bio šetač pasa. Život me odveo u nekom drugom smjeru, no nakon ukupno 10 godina rada u administraciji, shvatila sam da to nije moj poziv i da ne uspijevam pronaći svoju sreću radeći takve poslove. Obećala sam si da ću pronaći posao koji ću obavljati s guštom, osmjehom od uha do uha i radi kojeg mi neće biti teško raditi i više i duže, jer će mi biti užitak. Često sam govorila u šali da bi bilo divno kad bi postojalo radno mjesto na kojem se mogu maziti sa psima cijeli dan, no što sam više o tome razmišljala, to sam više zaista i pokušavala smisliti način da spojim „ugodno s korisnim“. Tad mi se javila ideja da naučim šišati
@@ -206,8 +206,8 @@
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/cukigrooms_certificate.jpg')"></div>
-                    <div class="col-lg-6 my-auto showcase-text">
+                    <div class="col-lg-6 text-white o-meni-img" style="background-image: url('assets/img/cukigrooms_certificate.jpg')"></div>
+                    <div class="col-lg-6 my-auto o-meni-text">
                         <p class="lead mb-0">
                             Upisala sam Kali Grooming School, licenciranu od strane International Grooming Associationa, vlasnice Inge Dvojković, dr.vet.med., a tečaj u trajanju od 6 mjeseci uspješno sam završila ispitom samostalnog šišanja pasa. Inga me i ohrabrila da se odlučim na ovaj korak, otvaranje svog vlastitog salona. Neizmjerno sam joj zahvalna na znanju koje mi je prenijela i uvela me u svijet šišanja i uređivanja pasa, što vjeruje u mene i pruža mi podršku i neograničene mogućnosti učenja, te kroz organizirane seminare konstantno nadograđujem znanje i vještine i pratim aktualne svjetske trendove. Budući da napokon osjećam da sam tu gdje trebam biti, vjerujem u sebe i svoje sposobnosti, otvoren je CukiGrooms – salon koji njeguje individualni pristup svakom pojedinom psu prema njegovim potrebama. Salon nudi usluge kupanja, raspetljavanja, šišanja, trimanja, izvlačenja poddlake, odlinjavanja, rezanja noktiju i čišćenja ušiju. Psi do 15kg stanu u kadu, a za jednostavan ulazak
                             velikih pasa tu je walk-in tuš u razini poda, bez skliskih stepenica i visokih rubova koji stvaraju osjećaj klaustrofobije i sputanosti.
