--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#informacije">Informacije</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#gallery">gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#gallery">Galerija</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about-me">O meni</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pravilnik">Pravilnik</a></li>
                     </ul>
