--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Cjenik</h2>
                     <p class="lead mb-0">Usluga uključuje: kupanje + šišanje / izlinjavanje / uređivanje + higijena ušiju + skraćivanje noktiju.</p>
+                    <p class="lead mb-2">Cijene su informativnog karaktera. Definicija konačne cijene ovisi o temperamentu psa i stanju dlake.</p>
                     <p class="lead mt-5">
                         <b>
                             Usluge koje se dodatno naplaćuju:
@@ -218,7 +219,7 @@
                                 <ul class="list-styled mb-4">
                                     <li class="mb-2">skraćivanje noktiju 5-10€ (ovisno o volji psa za suradnju)</li>
                                     <li class="mb-2">higijena ušiju 5-10€ (ovisno o volji psa za suradnju)</li>
-                                    <li class="mb-2">privikavanje štenaca (3-6mj starosti, sve pasmine) 20€ /6 dolazaka dolazak 1x tjedno, 6 uzastopnih tjedana (paket uključuje privikavanje štenaca na prostor, kadu, fen, disciplinu na stolu, boravak s drugim psima, skraćivanje noktiju, higijenu ušiju te šišanje/trimanje/izlinjavanje/uređivanje)</li>
+                                    <li class="mb-2">privikavanje štenaca (3-6mj starosti, sve pasmine) 20€ /6 dolazaka (1x tjedno, 6 uzastopnih tjedana). Paket uključuje privikavanje štenaca na prostor, kadu, fen, disciplinu na stolu, boravak s drugim psima, skraćivanje noktiju, higijenu ušiju te šišanje ili izlinjavanje.</li>
                                 </ul>
                             </div>
                         </div>
